--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,7 @@ description = "Windows Registry Editor with Pythonic interface"
 authors = ["DinhHuy2010 <huy04052010@outlook.com>"]
 readme = "README.md"
 packages = [{include = "windowsregistry"}]
+homepage = "https://github.com/DinhHuy2010/windowsregistry.py"
 
 [tool.poetry.dependencies]
 python = "^3.10"
