--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ license = "MIT"
 [tool.poetry.dependencies]
 python = "^3.9"
 typing-extensions = "^4.12.2"
+more-itertools = "^10.5.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.3"
